feat: integrate image picker functionality for profile and shop images, enhance user experience with loading indicators and improved UI elements

--- a/app.json
+++ b/app.json
@@ -40,6 +40,12 @@
           "resizeMode": "contain",
           "backgroundColor": "#000B58"
         }
+      ],
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "The app accesses your photos."
+        }
       ]
     ],
     "experiments": {
