--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.0",
+    "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.6",
     "expo-location": "~18.1.5",
     "expo-router": "~5.1.2",
@@ -39,6 +40,7 @@
     "react-native": "0.79.3",
     "react-native-flash-message": "^0.4.2",
     "react-native-maps": "1.20.1",
+    "react-native-reanimated": "~3.17.4",
     "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
@@ -47,9 +49,7 @@
     "react-native-svg-transformer": "^1.5.1",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "socket.io-client": "^4.8.1",
-    "react-native-reanimated": "~3.17.4",
-    "expo-image-picker": "~16.1.4"
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
