--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "react-native": "0.79.3",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-gifted-chat": "^2.8.1",
+    "react-native-keyboard-controller": "^1.18.5",
     "react-native-maps": "1.20.1",
     "react-native-maps-directions": "^1.9.0",
     "react-native-reanimated": "~3.17.4",
