--- a/package.json
+++ b/package.json
@@ -5,29 +5,43 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint"
+  },
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "exclude": [
+          "react-native-select-dropdown",
+          "socket.io-client"
+        ]
+      }
+    }
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@google/genai": "^1.5.1",
     "@gorhom/bottom-sheet": "^5.1.6",
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.10.0",
     "dayjs": "^1.11.13",
-    "expo": "~53.0.11",
+    "eslint-config-expo": "~9.2.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "expo": "^53.0.0",
     "expo-blur": "~14.1.5",
     "expo-checkbox": "~4.1.4",
     "expo-constants": "~17.1.6",
+    "expo-dev-client": "~5.2.4",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
-    "expo-image": "~2.3.0",
+    "expo-image": "~2.4.0",
     "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.6",
     "expo-location": "~18.1.5",
@@ -36,18 +50,17 @@
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.8",
-    "expo-web-browser": "~14.1.6",
+    "expo-web-browser": "~14.2.0",
     "lodash": "^4.17.21",
     "lottie-react-native": "7.2.2",
+    "prettier": "^3.6.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.3",
+    "react-native": "0.79.5",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-gifted-chat": "^2.8.1",
-    "react-native-keyboard-controller": "^1.18.5",
     "react-native-maps": "1.20.1",
-    "react-native-maps-directions": "^1.9.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "5.4.0",
@@ -55,6 +68,7 @@
     "react-native-select-dropdown": "^4.0.1",
     "react-native-svg": "15.11.2",
     "react-native-svg-transformer": "^1.5.1",
+    "react-native-vector-icons": "^10.3.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "react-redux": "^9.2.0",
@@ -64,7 +78,7 @@
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
     "@types/react-native-vector-icons": "^6.4.18",
-    "eslint": "^9.25.0",
+    "eslint": "^9.34.0",
     "eslint-config-expo": "~9.2.0",
     "expo-module-scripts": "^4.1.10",
     "typescript": "~5.8.3"
