--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-native": "0.79.5",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "1.20.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-reanimated-carousel": "^4.0.2",
