--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "react-native-webview": "13.13.5",
     "react-redux": "^9.2.0",
     "socket.io-client": "^4.8.1",
-    "expo-audio": "~0.4.9"
+    "expo-av": "~15.1.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
