--- a/package.json
+++ b/package.json
@@ -35,16 +35,20 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "expo": "^53.0.0",
+    "expo-av": "~15.1.7",
     "expo-blur": "~14.1.5",
     "expo-checkbox": "~4.1.4",
     "expo-constants": "~17.1.6",
     "expo-dev-client": "~5.2.4",
+    "expo-device": "~7.1.4",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
     "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.6",
     "expo-location": "~18.1.5",
+    "expo-notifications": "~0.31.4",
+    "expo-permissions": "^14.4.0",
     "expo-router": "~5.1.2",
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
@@ -72,8 +76,7 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "react-redux": "^9.2.0",
-    "socket.io-client": "^4.8.1",
-    "expo-av": "~15.1.7"
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
