feat: implement no push notification when user is online, online and away status,  fix chat bug, and fix routing issue

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "auto-aider-app",
+    "name": "Auto AIDER",
     "slug": "auto-aider-app",
     "version": "1.0.0",
     "orientation": "portrait",
