--- a/app.json
+++ b/app.json
@@ -67,6 +67,17 @@
           "enableBackgroundRemoteNotifications": false
         }
       ],
+      [
+        "with-rn-bluetooth-classic",
+        {
+          "peripheralUsageDescription": "Allow myDevice to check bluetooth peripheral info",
+          "alwaysUsageDescription": "Allow myDevice to always use bluetooth info",
+          "protocols": [
+            "com.myCompany.p1",
+            "com.myCompany.p2"
+          ]
+        }
+      ],
       "expo-web-browser"
     ],
     "experiments": {
