--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.8",
     "expo-web-browser": "~14.2.0",
+    "firebase": "^12.3.0",
     "lodash": "^4.17.21",
     "lottie-react-native": "7.2.2",
     "prettier": "^3.6.2",
