--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@google/genai": "^1.5.1",
     "@gorhom/bottom-sheet": "^5.1.6",
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-firebase/app": "^23.4.0",
+    "@react-native-firebase/auth": "^23.4.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
