--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -87,6 +87,12 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
+    compileOptions {
+        coreLibraryDesugaringEnabled true
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     namespace 'com.glensonansin.autoaiderapp'
     defaultConfig {
         applicationId 'com.glensonansin.autoaiderapp'
@@ -149,11 +155,13 @@ android {
 
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
+    coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:2.1.3")
     implementation("com.facebook.react:react-android")
     implementation platform("com.google.firebase:firebase-bom:34.2.0")
     implementation("com.google.firebase:firebase-analytics")
     implementation("com.google.firebase:firebase-messaging")
     implementation("com.google.firebase:firebase-auth")
+    implementation("com.google.android.recaptcha:recaptcha:18.8.0")
 
     def isGifEnabled = (findProperty('expo.gif.enabled') ?: "") == "true";
     def isWebpEnabled = (findProperty('expo.webp.enabled') ?: "") == "true";
