--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@google-cloud/recaptcha-enterprise-react-native": "^18.8.0",
     "@google/genai": "^1.5.1",
     "@gorhom/bottom-sheet": "^5.1.6",
     "@react-native-async-storage/async-storage": "2.1.2",
