--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@react-navigation/native": "^7.1.6",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.10.0",
+    "buffer": "^6.0.3",
     "dayjs": "^1.11.13",
     "eslint-config-expo": "~9.2.0",
     "eslint-config-prettier": "^10.1.8",
@@ -64,6 +65,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-ble-plx": "^3.5.0",
     "react-native-bluetooth-classic": "^1.73.0-rc.14",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "~2.24.0",
