feat: add background location tracking functionality and update permissions

--- a/android/.gitignore
+++ b/android/.gitignore
@@ -7,10 +7,12 @@
 build/
 .idea
 .gradle
-local.properties
 *.iml
 *.hprof
 .cxx/
+*.keystore
 
 # Bundle artifacts
 *.jsbundle
+
+/app/google-services.json
