--- a/package.json
+++ b/package.json
@@ -84,7 +84,8 @@
     "react-native-webview": "13.13.5",
     "react-redux": "^9.2.0",
     "socket.io-client": "^4.8.1",
-    "with-rn-bluetooth-classic": "^1.0.5"
+    "with-rn-bluetooth-classic": "^1.0.5",
+    "expo-task-manager": "~13.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
