--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@google-cloud/recaptcha-enterprise-react-native": "^18.8.0",
     "@google/genai": "^1.5.1",
     "@gorhom/bottom-sheet": "^5.1.6",
     "@react-native-async-storage/async-storage": "2.1.2",
@@ -57,6 +56,7 @@
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.8",
+    "expo-task-manager": "~13.1.6",
     "expo-web-browser": "~14.2.0",
     "firebase": "^12.3.0",
     "lodash": "^4.17.21",
@@ -66,7 +66,6 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-ble-plx": "^3.5.0",
-    "react-native-bluetooth-classic": "^1.73.0-rc.14",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
@@ -83,9 +82,7 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "react-redux": "^9.2.0",
-    "socket.io-client": "^4.8.1",
-    "with-rn-bluetooth-classic": "^1.0.5",
-    "expo-task-manager": "~13.1.6"
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
